# gd32_test

./: CMakeLists.txt  README.md  build.sh  clear.sh  doc.txt  test.s
cmake/: toolchain.cmake
code/: CMakeLists.txt  test.c
doc/: 编译指导书.md
shell/: install_compile_software.sh
